scream sound check

--- a/Portfolio/center/do/과제8/index.html
+++ b/Portfolio/center/do/과제8/index.html
@@ -228,7 +228,7 @@
     var col_count = 0;
     var row_count = 0;
     function bingo_ck(){
-        var audio1= new Audio('scream.mp3');
+        var audio1= new Audio('Scream.mp3');
         audio1.currentTime = 0;
 
         col_count = 0;
