scream sound check

--- a/Portfolio/center/do/과제8/index.html
+++ b/Portfolio/center/do/과제8/index.html
@@ -399,7 +399,7 @@
     function start1(){ //깜놀사진
         gongpo.src = "gongpo.png"
         imgDiv.style.display = "block"
-        var audio1= new Audio('scream.mp3');
+        var audio1= new Audio('Scream.mp3');
         audio1.currentTime = 0;
         audio1.play();
     }
